# PyNeon

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  pg.py  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: main.yml  publish-pypi.yml  python-publish.yml  sphinx.yml  tests.yml
_sources/reference/: data.rst.txt  dataset.rst.txt  epochs.rst.txt  events.rst.txt  index.rst.txt  preprocess.rst.txt  stream.rst.txt  video.rst.txt
_sources/tutorials/: epoching.ipynb.txt  export_to_bids.ipynb.txt  index.rst.txt  interpolate_and_concat.ipynb.txt  pupil_size_and_epoching.ipynb.txt  read_recording.ipynb.txt  resample_and_concat.ipynb.txt  surface_mapping.ipynb.txt  video.ipynb.txt
doc/: genindex.html  search.html  searchindex.js
doc/tutorials/: index.html
docs/: .buildinfo  conf.py  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/reference/: data.html  dataset.html  export.html  index.html  preprocess.html  recording.html  recording.rst  vis.html
docs/tutorials/: epoching.html  export_to_bids.html  export_to_bids.ipynb  index.html  load_dataset.html  load_dataset.ipynb  load_recording.html  read_recording.html  read_recording.ipynb  resample_and_concat.html  resample_and_concat.ipynb  video.html
pyneon/: __init__.py  data.py  dataset.py  enrichments.py  epochs.py  events.py  recording.py  sample_data.py  stream.py  tabular.py  video.py
pyneon/export/: __init__.py  _bids_parameters.py  export_bids.py  export_cloud.py
pyneon/io/: __init__.py  _bids_parameters.py  export_bids.py
pyneon/preprocess/: __init__.py  epoch.py  filter.py  mapping.py  preprocess.py
pyneon/utils/: __init__.py  doc_decorators.py  sample_data.py  utils.py  variables.py
pyneon/video/: __init__.py  apriltag.py  apriltags.py  aruco.py  batch.py  constants.py  detect_contour.py  detect_marker.py  estimate_pose.py  homography.py  layout.py  mapping.py  marker.py  marker_mapping.py  pose.py  scanpath.py  screen.py  surface.py  utils.py  variables.py  video.py
pyneon/vis/: __init__.py  dist.py  epoch.py  mapping.py  pose.py  scanpath.py  util.py  video.py  vis.py  vis_video.py
reference/: base_tabular.html  data.html  dataset.html  epochs.html  events.html  export.html  index.html  preprocess.html  recording.html  stream.html  utils.html  video.html  vis.html
source/: conf.py  index.rst
source/reference/: base_tabular.rst  data.rst  dataset.rst  epochs.rst  events.rst  index.rst  preprocess.rst  recording.rst  stream.rst  utils.rst  video.rst  vis.rst
source/tutorials/: apriltag_detection.ipynb  apriltag_detection_extensive.ipynb  detection_comparison.ipynb  epoching.ipynb  estimated_scanpath.csv  estimated_scanpath.pkl  export_to_bids.ipynb  fused_trajectory.csv  index.rst  interpolate_and_concat.ipynb  load_dataset.ipynb  load_recording.ipynb  map_gaze_to_video.ipynb  native_tests.ipynb  pupil_size_and_epoching.ipynb  read_recording.ipynb  read_recording_cloud.ipynb  read_recording_native.ipynb  resample_and_concat.ipynb  scanpath_on_video.ipynb  sensor_fusion.ipynb  short_aruco.ipynb  tags.csv  (+2 more)
tests/: conftest.py  download.ipynb  read_dataset.py  read_recording.py  test_basic.py  test_concat_channels.py  test_custom_data.py  test_events.py  test_export.py  test_interp_and_concat.py  test_stream.py  test_streams.py  test_video.py
tutorials/: apriltag_detection_extensive.html  apriltag_detection_extensive.ipynb  epoching.html  epoching.ipynb  export_to_bids.html  export_to_bids.ipynb  index.html  interpolate_and_concat.html  pupil_size_and_epoching.html  pupil_size_and_epoching.ipynb  read_recording.html  read_recording.ipynb  read_recording_cloud.html  read_recording_native.html  read_recording_native.ipynb  resample_and_concat.html  surface_mapping.html  video.html  video.ipynb
(+28 files in other folders)
